# EhabEngine

./: .gitmodules
MyEngine/: - Copy.gitignore  CMakeLists.txt
MyEngine/Shaders/src/: simple.fs.sc  simple.vs.sc
MyEngine/shaders/src/: varying.def.sc
MyEngine/src/: Engine.cpp  Engine.h  GameObjects.cpp  GameObjects.h  Renderer_BGFX.cpp  Renderer_BGFX.h  main.cpp
MyEngine/src/Core/: Debug.cpp  Debug.h  Timer.cpp  Timer.h  main.cpp
MyEngine/src/Engine/: Engine.cpp  Engine.h
MyEngine/src/Interfaces/: IRenderer.h  ISystems.cpp  ISystems.h
MyEngine/src/Systems/: ParticleModel.cpp  ParticleModel.h  System_Physics.cpp  System_Physics.h  System_Renderer.cpp  System_Renderer.h
MyEngine/tools/: compile_shaders.bat
